# wireguard-commander

./: .gitignore  LICENSE  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
backend/: .flake8  Dockerfile  pyproject.toml
backend/src/: config.py  logging.yml  main.py  permissions.yml
backend/src/endpoints/: interface.py  peer.py  tool.py  usergroups.py  users.py
backend/src/libs/: db.py  helpers.py  keycloak.py  socket.py
backend/src/migration/: update_0.sql  wireguard_pg_init.sql
backend/src/models/: __init__.py  base.py  interface.py  peer.py  user.py  usergroup.py
backend/src/static/: README.md
backend/src/templates/: interface_full.conf.j2
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  helpers.js  main.js
frontend/src/assets/: main.css
frontend/src/components/: ButtonRender.vue  ChipsRender.vue  _template.vue  block.vue  deleteConfirmation.vue  info.vue  ipField.vue  notification.vue  page.vue  table.vue
frontend/src/plugins/: vuetify.js
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: apiStore.js  authStore.js
frontend/src/views/: ClientView.vue  (+5 more)
wireguard-commander/: Dockerfile  README.md  pyproject.toml
wireguard-commander/src/wireguard_commander/: default_config.yaml  main.py
wireguard-commander/src/wireguard_commander/libs/: helper.py  ldap_client.py
wireguard-commander/src/wireguard_commander/model/: base.py  server.py  user.py  user_device.py  worker.py
wireguard-commander/src/wireguard_commander/model/formaters/: __init__.py  client_formater.py  server_formater.py
wireguard-commander/src/wireguard_commander/sql/: 0-init.sql  1-update.sql
wireguard-server/: Dockerfile  init.sh
(+8 files in other folders)
