[project]
name = "wireguard_commander"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Martin Korbel", email = "mkorbel@alps.cz"},
]
dependencies = ["fastapi[standard]>=0.115.12"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
